syntax = "proto3";

package pbindex;

option go_package = "server/proto/pbindex";

import "google/api/annotations.proto";

service Api {
  // Get statistic.
  rpc GetStatistic (GetRequestStatistic) returns (ResponseStatistic) {
    option (google.api.http) = {
      get: "/v2/index/get-statistic"
    };
  }
  // Index get currencies.
  rpc GetCurrencies (GetRequestCurrencies) returns (ResponseCurrency) {
    option (google.api.http) = {
      post: "/v2/index/get-currencies"
      body: "*"
    };
  }
  // Index get pairs.
  rpc GetPairs (GetRequestPairs) returns (ResponsePair) {
    option (google.api.http) = {
      post: "/v2/index/get-pairs"
      body: "*"
    };
  }
}

// Statistic message structure.
message Statistic {
  message Account {
    int32 disable = 1;
    int32 enable = 2;
  }
  message Chain {
    int32 disable = 1;
    int32 enable = 2;
  }
  message Currency {
    int32 disable = 1;
    int32 enable = 2;
  }
  message Pair {
    int32 disable = 1;
    int32 enable = 2;
  }
  message Transaction {
    int32 filled = 1;
    int32 pending = 2;
  }
  message Order {
    int32 buy = 1;
    int32 sell = 2;
  }
  Account accounts = 1;
  Chain chains = 2;
  Currency currencies = 3;
  Pair pairs = 4;
  Transaction transactions = 5;
  Order orders = 6;
  message Reserve {
    string symbol = 1;
    double value = 2;
    double value_charged = 3;
    double value_charged_convert = 4;
    double value_costs = 5;
  }
  repeated Reserve reserves = 7;
}

// Pair message structure.
message Pair {
  int64 id = 1;
  string symbol = 2;
  string base_unit = 3;
  string quote_unit = 4;
  double price = 5;
  double ratio = 6;
}

// Currency message structure.
message Currency {
  int64 id = 1;
  string name = 2;
  string symbol = 3;
  double fees_trade = 4;
  double fees_discount = 5;
  repeated Pair pairs = 6;
}

// Statistic structure.
message GetRequestStatistic {}
message ResponseStatistic {
  Statistic fields = 1;
}

// Currency structure.
message GetRequestCurrencies {
  int64 id = 1;
}
message ResponseCurrency {
  repeated Currency fields = 1;
  int32 count = 2;
}

// Pair structure.
message GetRequestPairs {}
message ResponsePair {
  repeated Pair fields = 1;
}